<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.app.smktelkom.notificationmotionactivity.UserActivityNotificationFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <CheckBox
            android:id="@+id/check_stationary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stationary"
            android:layout_margin="6dp"/>

        <CheckBox
            android:layout_toEndOf="@id/check_stationary"
            android:id="@+id/check_walk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk"
            android:layout_margin="6dp"/>

        <CheckBox
            android:layout_below="@id/check_stationary"
            android:id="@+id/check_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run"
            android:layout_margin="6dp"/>

        <CheckBox
            android:layout_toEndOf="@id/check_run"
            android:layout_alignBaseline="@id/check_run"
            android:id="@+id/check_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle"
            android:layout_margin="6dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/start" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info"
        style="@android:style/TextAppearance.Medium"
        />
</LinearLayout>